[tool.poetry]
name = "lims-application"
version = "0.1.0"
description = "LIMS based software"
authors = ["ThangaDhiwanV <thanga.dhiwan@solitontech.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.21"
pydantic = "^2.3.0"
psycopg2-binary = "^2.9.7"
alembic = "^1.12.0"
python-multipart = "^0.0.6"
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
python-dotenv = "^1.0.0"
httpx = "^0.24.1"
pandas = "^2.1.0"
# Note: uuid is included in the Python standard library; dependency below is optional/backport.
uuid = "^1.30"
pydantic-settings = "^2.10.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.2.0"
flake8 = "^6.0.0"
pre-commit = "^3.2.2"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]
include = "\\.pyi?$"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
